--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,12 +4,16 @@
   </div>
     
   <div class="box">
-    <%  for(var i=0;i<newlistItems.length; i++){ %>
-    <div class="item">
-      <input type="checkbox">
-      <p><%= newlistItems[i] %></p>
-    </div> 
-      <%  } %>
+    <% newlistItems.forEach(function(item){ %>
+
+      <form action="/delete" method="post">
+        <div class="item">
+          <input type="checkbox" name="checkbox" value="<%=item._id%>" onchange="this.form.submit()">
+          <p><%= item.name %></p>
+        </div>
+        <input type="hidden" name="listName" value="<%=ListTitle%>">
+      </form>
+    <% }) %>
 
       <form class="item" action="/" method="post">
         <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
